--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "antd": "^5.24.0",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
